redoes meme feed images and fixes alignment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -78,10 +78,13 @@ body {
 		width: 100%;
 		position: relative;
 		overflow: hidden;
-		max-width: 500px;
+		height: 144px;
+		width: 144px;
+
 		
 		img {
 			width: 100%;
+			height: 100%;
 		}
 		
 		&:hover {
@@ -99,6 +102,7 @@ body {
 		right: 0px;
 		top: -32px;
 		position: absolute;
+		font-size: 80%;
 		transition: top .5s ease;
 		
 		.btn {
